[gd_scene load_steps=6 format=3 uid="uid://bprpvue30gw7j"]

[ext_resource type="Script" path="res://Main.gd" id="1_nx25r"]
[ext_resource type="PackedScene" uid="uid://c4ivwfi11y06q" path="res://fireball.tscn" id="2_7f6q2"]
[ext_resource type="PackedScene" uid="uid://bpjela7r611v8" path="res://player.tscn" id="2_bis4s"]
[ext_resource type="PackedScene" uid="uid://ck4uilli3hgr3" path="res://hud.tscn" id="3_1hvr0"]

[sub_resource type="Curve2D" id="Curve2D_ts01o"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 29, 14, 0, 0, 0, 0, 76, 14, 0, 0, 0, 0, 110, 14, 0, 0, 0, 0, 138, 15, 0, 0, 0, 0, 163, 15, 0, 0, 0, 0, 182, 15, 0, 0, 0, 0, 201, 14, 0, 0, 0, 0, 221, 15, 0, 0, 0, 0, 243, 16, 0, 0, 0, 0, 265, 15, 0, 0, 0, 0, 285, 15, 0, 0, 0, 0, 303, 15, 0, 0, 0, 0, 322, 15, 0, 0, 0, 0, 342, 13, 0, 0, 0, 0, 359, 13, 0, 0, 0, 0, 381, 15, 0, 0, 0, 0, 400, 17, 0, 0, 0, 0, 418, 15, 0, 0, 0, 0, 440, 17, 0, 0, 0, 0, 459, 17, 0, 0, 0, 0, 480, 16, 0, 0, 0, 0, 499, 16, 0, 0, 0, 0, 519, 16, 0, 0, 0, 0, 534, 16, 0, 0, 0, 0, 555, 19, 0, 0, 0, 0, 572, 20, 0, 0, 0, 0, 589, 22, 0, 0, 0, 0, 612, 20, 0, 0, 0, 0, 29, 14)
}
point_count = 29

[node name="Main" type="Node"]
script = ExtResource("1_nx25r")
enemy_scene = ExtResource("2_7f6q2")

[node name="HUD" parent="." instance=ExtResource("3_1hvr0")]

[node name="Player" parent="." instance=ExtResource("2_bis4s")]
position = Vector2(608, 325)

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(581, 297)

[node name="EnemySpawns" type="Path2D" parent="."]
curve = SubResource("Curve2D_ts01o")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawns"]
position = Vector2(29, 14)

[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="EnemySpawn" to="." method="_on_enemy_spawn_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
